horizontal scroll fixed

--- a/crew.css
+++ b/crew.css
@@ -270,10 +270,6 @@ h1 {
   margin-top: 0.75rem;
 }
 
-#commander {
-  width: 444px;
-}
-
 @media (min-width: 768px) {
   body {
     background-image: url(./assets/crew/background-crew-tablet.jpg) no-repeat;
